force-app/main/default/objects/Conflict_Check_Search_Result__c/Conflict_Check_Search_Result__c.object-meta.xml
<CustomObject>
    <label>Conflict Check Search Result</label>
    <nameField>
        <displayFormat>CCSR-{000000}</displayFormat>
        <label>Conflict Check Search Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict Check Search Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>