force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Agreement_and_Contract__c.field-meta.xml
<CustomField>
    <fullName>Agreement_and_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement and Contract</label>
    <referenceTo>SymphonyLF__Agreement_Contract__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>