force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Chain_of_Title__c.field-meta.xml
<CustomField>
    <fullName>Chain_of_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain of Title</label>
    <referenceTo>SymphonyLF__Chain_of_Title__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>