force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Client_Results</relationshipName>
    <type>Lookup</type>
</CustomField>