force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Conflict_Check__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Check__c</fullName>
    <label>Conflict Check</label>
    <referenceTo>Conflict_Check__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>