force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copyright</label>
    <referenceTo>SymphonyLF__Copyright__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>