force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Design_Family__c.field-meta.xml
<CustomField>
    <fullName>Design_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Family</label>
    <referenceTo>SymphonyLF__Design_Family__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>