force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Dispute_Opposition__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Opposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute/Opposition</label>
    <referenceTo>SymphonyLF__Dispute_Opposition__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>