force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/General_Matter__c.field-meta.xml
<CustomField>
    <fullName>General_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Matter</label>
    <referenceTo>SymphonyLF__General_Matter__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>