force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Inventor_Designer_Author__c.field-meta.xml
<CustomField>
    <fullName>Inventor_Designer_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventor/Designer/Author</label>
    <referenceTo>SymphonyLF__Inventor_Designer_Author__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Inventor_Results</relationshipName>
    <type>Lookup</type>
</CustomField>