force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Verified?</label>
    <type>Checkbox</type>
</CustomField>