force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Keyword_Association__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Keyword Association</label>
    <referenceTo>SymphonyLF__Keyword_Association__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Keyword_Results</relationshipName>
    <type>Lookup</type>
</CustomField>