force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/LookupFieldToSobject__c.field-meta.xml
<CustomField>
    <fullName>LookupFieldToSobject__c</fullName>
    <label>Lookup Field To Sobject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>