force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mark</label>
    <referenceTo>SymphonyLF__Mark__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>