force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass/ Fail ?</label>
    <type>Checkbox</type>
</CustomField>