force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent</label>
    <referenceTo>SymphonyLF__Patent__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>