force-app/main/default/objects/Conflict_Check_Search_Result__c/fields/Trademark__c.field-meta.xml
<CustomField>
    <fullName>Trademark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trademark</label>
    <referenceTo>SymphonyLF__Trademark__c</referenceTo>
    <relationshipLabel>Conflict Check Search Results</relationshipLabel>
    <relationshipName>Conflict_Check_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>