force-app/main/default/objects/Conflict_Check_Search_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chain_of_Title__c</columns>
    <columns>Client__c</columns>
    <columns>Conflict_Check__c</columns>
    <columns>Copyright__c</columns>
    <columns>Design__c</columns>
    <columns>Entity__c</columns>
    <columns>Inventor_Designer_Author__c</columns>
    <columns>Is_Verified__c</columns>
    <columns>Keyword_Association__c</columns>
    <columns>Patent__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Trademark__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>